# home-manager

./: .gitignore  .gitmodules  Makefile  README.md  flake.nix  test-security.txt
.github/workflows/: claude-review.yml  claude-security-review.yml  nix-check.yml  nix-fmt.yml  security-scan.yml  trigger-claude-security-review.yml  trigger-claude.yml
hosts/aarch64-darwin/: homebrew.nix  homemanager.nix  services.nix  shell.nix
hosts/x86_64-linux/: homemanager.nix
libs/: default.nix
libs/cargo/: default.nix
libs/npm/: default.nix
libs/pip/: default.nix
misc/shortcuts/: Calendar.shortcut  Notes.shortcut  Reminder.shortcut
modules/cargo/: default.nix
modules/npm/: default.nix
modules/pipx/: default.nix
modules/zleFunc/: default.nix
modules/zshFunc/: default.nix
overlays/: default.nix
pkgs/: hash.nix  hashfile.json
pkgs/ai/: build.sh  claude-code.nix  codex.nix  default.nix
pkgs/aws-documentation/: default.nix
pkgs/awscli-local/: default.nix
pkgs/claude-code/: default.nix
pkgs/codex/: default.nix
pkgs/context7/: default.nix
pkgs/git/: git-wrapped
pkgs/git-wrapped/: default.nix  git-wrapped
pkgs/icalPal/: default.nix
pkgs/inputSourceSelector/: default.nix
pkgs/jankyborders/: default.nix
pkgs/mac/: default.nix  input-source-selector.nix
pkgs/mcp/: aws-diagram.nix  (+12 more)
portable/: default.nix
portable/say/: flake.nix  pyproject.toml  say.py
portable/say/nix/: say-overlay.nix
scripts/: Makefile  build-cache  build-pkg  update-all-output-hashes  update-output-hash  update-pkgs  update-versions
shell/: default.nix  system.nix
(+416 files in other folders)
